--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ db:
     - /srv/mapknitter_priv1/mk1_database:/var/lib/mysql
 web:
   build: .
-  command: ./start.sh
+  command: /bin/bash -c "sleep 5 && bundle exec rails s -p 3000 -b '0.0.0.0'"
   environment:
     - RAILS_ENV=production
   volumes:
